export const snapshot = {};

snapshot[`Deal > Set the game. 1`] = `
"🃟🃟🃟🃟
🂠🂠🂠🂠🂠🂠🂠
　🂠🂠🂠🂠🂠🂠
　　🂠🂠🂠🂠🂠
　　　🂠🂠🂠🂠
　　　　🂠🂠🂠
　　　　　🂠🂠
　　　　　　🂠
🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠 🃟 🃟"
`;

snapshot[`Deal > The foundation piles are empty. 1`] = `"🃟🃟🃟🃟"`;

snapshot[`Deal > Deal. 1`] = `
"🃟🃟🃟🃟
🂮🂫🂨🂤🂽🂶🃍
　🂭🂩🂥🂾🂷🃎
　　🂪🂦🂡🂸🂱
　　　🂧🂢🂹🂲
　　　　🂣🂺🂳
　　　　　🂻🂴
　　　　　　🂵
🃑🃒🃓🃔🃕🃖🃗🃘🃙🃚🃛🃝🃞🃁🃂🃃🃄🃅🃆🃇🃈🃉🃊🃋 🃟 🃟"
`;

snapshot[`Deal > Draw all. 1`] = `
"🃟🃟🃟🃟
🂠🂠🂠🂠🂠🂠🂠
　🂠🂠🂠🂠🂠🂠
　　🂠🂠🂠🂠🂠
　　　🂠🂠🂠🂠
　　　　🂠🂠🂠
　　　　　🂠🂠
　　　　　　🂠
🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠 🃋🃊🃉 🃟"
`;

snapshot[`Deal > Draw all. 2`] = `
"🃟🃟🃟🃟
🂠🂠🂠🂠🂠🂠🂠
　🂠🂠🂠🂠🂠🂠
　　🂠🂠🂠🂠🂠
　　　🂠🂠🂠🂠
　　　　🂠🂠🂠
　　　　　🂠🂠
　　　　　　🂠
🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠 🃈🃇🃆 🂠🂠🂠"
`;

snapshot[`Deal > Draw all. 3`] = `
"🃟🃟🃟🃟
🂠🂠🂠🂠🂠🂠🂠
　🂠🂠🂠🂠🂠🂠
　　🂠🂠🂠🂠🂠
　　　🂠🂠🂠🂠
　　　　🂠🂠🂠
　　　　　🂠🂠
　　　　　　🂠
🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠 🃅🃄🃃 🂠🂠🂠🂠🂠🂠"
`;

snapshot[`Deal > Draw all. 4`] = `
"🃟🃟🃟🃟
🂠🂠🂠🂠🂠🂠🂠
　🂠🂠🂠🂠🂠🂠
　　🂠🂠🂠🂠🂠
　　　🂠🂠🂠🂠
　　　　🂠🂠🂠
　　　　　🂠🂠
　　　　　　🂠
🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠 🃂🃁🃞 🂠🂠🂠🂠🂠🂠🂠🂠🂠"
`;

snapshot[`Deal > Draw all. 5`] = `
"🃟🃟🃟🃟
🂠🂠🂠🂠🂠🂠🂠
　🂠🂠🂠🂠🂠🂠
　　🂠🂠🂠🂠🂠
　　　🂠🂠🂠🂠
　　　　🂠🂠🂠
　　　　　🂠🂠
　　　　　　🂠
🂠🂠🂠🂠🂠🂠🂠🂠🂠 🃝🃛🃚 🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠"
`;

snapshot[`Deal > Draw all. 6`] = `
"🃟🃟🃟🃟
🂠🂠🂠🂠🂠🂠🂠
　🂠🂠🂠🂠🂠🂠
　　🂠🂠🂠🂠🂠
　　　🂠🂠🂠🂠
　　　　🂠🂠🂠
　　　　　🂠🂠
　　　　　　🂠
🂠🂠🂠🂠🂠🂠 🃙🃘🃗 🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠"
`;

snapshot[`Deal > Draw all. 7`] = `
"🃟🃟🃟🃟
🂠🂠🂠🂠🂠🂠🂠
　🂠🂠🂠🂠🂠🂠
　　🂠🂠🂠🂠🂠
　　　🂠🂠🂠🂠
　　　　🂠🂠🂠
　　　　　🂠🂠
　　　　　　🂠
🂠🂠🂠 🃖🃕🃔 🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠"
`;

snapshot[`Deal > Draw all. 8`] = `
"🃟🃟🃟🃟
🂠🂠🂠🂠🂠🂠🂠
　🂠🂠🂠🂠🂠🂠
　　🂠🂠🂠🂠🂠
　　　🂠🂠🂠🂠
　　　　🂠🂠🂠
　　　　　🂠🂠
　　　　　　🂠
 🃓🃒🃑 🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠"
`;

snapshot[`Deal > Redeal. 1`] = `
"🃟🃟🃟🃟
🂮🂫🂨🂤🂽🂶🃍
　🂭🂩🂥🂾🂷🃎
　　🂪🂦🂡🂸🂱
　　　🂧🂢🂹🂲
　　　　🂣🂺🂳
　　　　　🂻🂴
　　　　　　🂵
🃑🃒🃓🃔🃕🃖🃗🃘🃙🃚🃛🃝🃞🃁🃂🃃🃄🃅🃆🃇🃈🃉🃊🃋 🃟 🃟"
`;

snapshot[`Deal > Draw all. 9`] = `
"🃟🃟🃟🃟
🂠🂠🂠🂠🂠🂠🂠
　🂠🂠🂠🂠🂠🂠
　　🂠🂠🂠🂠🂠
　　　🂠🂠🂠🂠
　　　　🂠🂠🂠
　　　　　🂠🂠
　　　　　　🂠
🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠 🃋🃊🃉 🃟"
`;

snapshot[`Deal > Draw all. 10`] = `
"🃟🃟🃟🃟
🂠🂠🂠🂠🂠🂠🂠
　🂠🂠🂠🂠🂠🂠
　　🂠🂠🂠🂠🂠
　　　🂠🂠🂠🂠
　　　　🂠🂠🂠
　　　　　🂠🂠
　　　　　　🂠
🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠 🃈🃇🃆 🂠🂠🂠"
`;

snapshot[`Deal > Draw all. 11`] = `
"🃟🃟🃟🃟
🂠🂠🂠🂠🂠🂠🂠
　🂠🂠🂠🂠🂠🂠
　　🂠🂠🂠🂠🂠
　　　🂠🂠🂠🂠
　　　　🂠🂠🂠
　　　　　🂠🂠
　　　　　　🂠
🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠 🃅🃄🃃 🂠🂠🂠🂠🂠🂠"
`;

snapshot[`Deal > Draw all. 12`] = `
"🃟🃟🃟🃟
🂠🂠🂠🂠🂠🂠🂠
　🂠🂠🂠🂠🂠🂠
　　🂠🂠🂠🂠🂠
　　　🂠🂠🂠🂠
　　　　🂠🂠🂠
　　　　　🂠🂠
　　　　　　🂠
🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠 🃂🃁🃞 🂠🂠🂠🂠🂠🂠🂠🂠🂠"
`;

snapshot[`Deal > Draw all. 13`] = `
"🃟🃟🃟🃟
🂠🂠🂠🂠🂠🂠🂠
　🂠🂠🂠🂠🂠🂠
　　🂠🂠🂠🂠🂠
　　　🂠🂠🂠🂠
　　　　🂠🂠🂠
　　　　　🂠🂠
　　　　　　🂠
🂠🂠🂠🂠🂠🂠🂠🂠🂠 🃝🃛🃚 🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠"
`;

snapshot[`Deal > Draw all. 14`] = `
"🃟🃟🃟🃟
🂠🂠🂠🂠🂠🂠🂠
　🂠🂠🂠🂠🂠🂠
　　🂠🂠🂠🂠🂠
　　　🂠🂠🂠🂠
　　　　🂠🂠🂠
　　　　　🂠🂠
　　　　　　🂠
🂠🂠🂠🂠🂠🂠 🃙🃘🃗 🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠"
`;

snapshot[`Deal > Draw all. 15`] = `
"🃟🃟🃟🃟
🂠🂠🂠🂠🂠🂠🂠
　🂠🂠🂠🂠🂠🂠
　　🂠🂠🂠🂠🂠
　　　🂠🂠🂠🂠
　　　　🂠🂠🂠
　　　　　🂠🂠
　　　　　　🂠
🂠🂠🂠 🃖🃕🃔 🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠"
`;

snapshot[`Deal > Draw all. 16`] = `
"🃟🃟🃟🃟
🂠🂠🂠🂠🂠🂠🂠
　🂠🂠🂠🂠🂠🂠
　　🂠🂠🂠🂠🂠
　　　🂠🂠🂠🂠
　　　　🂠🂠🂠
　　　　　🂠🂠
　　　　　　🂠
 🃓🃒🃑 🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠"
`;

snapshot[`Playthrough > Set the game. 1`] = `
"🃟🃟🃟🃟
🂠🂠🂠🂠🂠🂠🂠
　🂠🂠🂠🂠🂠🂠
　　🂠🂠🂠🂠🂠
　　　🂠🂠🂠🂠
　　　　🂠🂠🂠
　　　　　🂠🂠
　　　　　　🂠
🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠 🃟 🃟"
`;

snapshot[`Playthrough > Reveal tableau pile 0. 1`] = `
"🃟🃟🃟🃟
🂮🂠🂠🂠🂠🂠🂠
　🂠🂠🂠🂠🂠🂠
　　🂠🂠🂠🂠🂠
　　　🂠🂠🂠🂠
　　　　🂠🂠🂠
　　　　　🂠🂠
　　　　　　🂠
🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠 🃟 🃟"
`;

snapshot[`Playthrough > Reveal tableau pile 1. 1`] = `
"🃟🃟🃟🃟
🂮🂠🂠🂠🂠🂠🂠
　🂭🂠🂠🂠🂠🂠
　　🂠🂠🂠🂠🂠
　　　🂠🂠🂠🂠
　　　　🂠🂠🂠
　　　　　🂠🂠
　　　　　　🂠
🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠 🃟 🃟"
`;

snapshot[`Playthrough > Reveal tableau pile 2. 1`] = `
"🃟🃟🃟🃟
🂮🂠🂠🂠🂠🂠🂠
　🂭🂠🂠🂠🂠🂠
　　🂪🂠🂠🂠🂠
　　　🂠🂠🂠🂠
　　　　🂠🂠🂠
　　　　　🂠🂠
　　　　　　🂠
🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠 🃟 🃟"
`;

snapshot[`Playthrough > Reveal tableau pile 3. 1`] = `
"🃟🃟🃟🃟
🂮🂠🂠🂠🂠🂠🂠
　🂭🂠🂠🂠🂠🂠
　　🂪🂠🂠🂠🂠
　　　🂧🂠🂠🂠
　　　　🂠🂠🂠
　　　　　🂠🂠
　　　　　　🂠
🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠 🃟 🃟"
`;

snapshot[`Playthrough > Reveal tableau pile 4. 1`] = `
"🃟🃟🃟🃟
🂮🂠🂠🂠🂠🂠🂠
　🂭🂠🂠🂠🂠🂠
　　🂪🂠🂠🂠🂠
　　　🂧🂠🂠🂠
　　　　🂣🂠🂠
　　　　　🂠🂠
　　　　　　🂠
🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠 🃟 🃟"
`;

snapshot[`Playthrough > Reveal tableau pile 5. 1`] = `
"🃟🃟🃟🃟
🂮🂠🂠🂠🂠🂠🂠
　🂭🂠🂠🂠🂠🂠
　　🂪🂠🂠🂠🂠
　　　🂧🂠🂠🂠
　　　　🂣🂠🂠
　　　　　🂻🂠
　　　　　　🂠
🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠 🃟 🃟"
`;

snapshot[`Playthrough > Reveal tableau pile 6. 1`] = `
"🃟🃟🃟🃟
🂮🂠🂠🂠🂠🂠🂠
　🂭🂠🂠🂠🂠🂠
　　🂪🂠🂠🂠🂠
　　　🂧🂠🂠🂠
　　　　🂣🂠🂠
　　　　　🂻🂠
　　　　　　🂵
🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠 🃟 🃟"
`;

snapshot[`Playthrough > Take the ten of spades from tableau 2, top. 1`] = `
"🃟🃟🃟🃟
🂮🂠🂠🂠🂠🂠🂠
　🂭🂠🂠🂠🂠🂠
　　　🂠🂠🂠🂠
　　　🂧🂠🂠🂠
　　　　🂣🂠🂠
　　　　　🂻🂠
　　　　　　🂵
🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠 🃟 🃟
🂪 from Tableau (2, 2)"
`;

snapshot[`Playthrough > Put onto the jack of hearts at tableau 5. 1`] = `
"🃟🃟🃟🃟
🂮🂠🂠🂠🂠🂠🂠
　🂭🂠🂠🂠🂠🂠
　　　🂠🂠🂠🂠
　　　🂧🂠🂠🂠
　　　　🂣🂠🂠
　　　　　🂻🂠
　　　　　🂪🂵
🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠 🃟 🃟"
`;

snapshot[`Playthrough > Take the the jack of hearts at tableau 5, top. 1`] = `
"🃟🃟🃟🃟
🂮🂠🂠🂠🂠🂠🂠
　🂭🂠🂠🂠🂠🂠
　　　🂠🂠🂠🂠
　　　🂧🂠🂠🂠
　　　　🂣🂠🂠
　　　　　　🂠
　　　　　　🂵
🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠 🃟 🃟
🂻🂪 from Tableau (5, 5)"
`;

snapshot[`Playthrough > Put onto the queen of spades at tableau 1. 1`] = `
"🃟🃟🃟🃟
🂮🂠🂠🂠🂠🂠🂠
　🂭🂠🂠🂠🂠🂠
　🂻　🂠🂠🂠🂠
　🂪　🂧🂠🂠🂠
　　　　🂣🂠🂠
　　　　　　🂠
　　　　　　🂵
🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠 🃟 🃟"
`;

snapshot[`Playthrough > Reveal tableau pile 2. 2`] = `
"🃟🃟🃟🃟
🂮🂠🂠🂠🂠🂠🂠
　🂭🂩🂠🂠🂠🂠
　🂻　🂠🂠🂠🂠
　🂪　🂧🂠🂠🂠
　　　　🂣🂠🂠
　　　　　　🂠
　　　　　　🂵
🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠 🃟 🃟"
`;

snapshot[`Playthrough > Reveal tableau pile 5. 2`] = `
"🃟🃟🃟🃟
🂮🂠🂠🂠🂠🂠🂠
　🂭🂩🂠🂠🂠🂠
　🂻　🂠🂠🂠🂠
　🂪　🂧🂠🂠🂠
　　　　🂣🂺🂠
　　　　　　🂠
　　　　　　🂵
🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠 🃟 🃟"
`;

snapshot[`Playthrough > Take the the nine of spades at tableau 2, top. 1`] = `
"🃟🃟🃟🃟
🂮🂠🂠🂠🂠🂠🂠
　🂭　🂠🂠🂠🂠
　🂻　🂠🂠🂠🂠
　🂪　🂧🂠🂠🂠
　　　　🂣🂺🂠
　　　　　　🂠
　　　　　　🂵
🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠 🃟 🃟
🂩 from Tableau (2, 1)"
`;

snapshot[`Playthrough > Put onto the ten of hearts at tableau 1. 1`] = `
"🃟🃟🃟🃟
🂮🂠🂠🂠🂠🂠🂠
　🂭　🂠🂠🂠🂠
　🂻　🂠🂠🂠🂠
　🂪　🂧🂠🂠🂠
　　　　🂣🂺🂠
　　　　　🂩🂠
　　　　　　🂵
🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠 🃟 🃟"
`;

snapshot[`Playthrough > Reveal tableau pile 2. 3`] = `
"🃟🃟🃟🃟
🂮🂠🂨🂠🂠🂠🂠
　🂭　🂠🂠🂠🂠
　🂻　🂠🂠🂠🂠
　🂪　🂧🂠🂠🂠
　　　　🂣🂺🂠
　　　　　🂩🂠
　　　　　　🂵
🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠🂠 🃟 🃟"
`;
